--- a/templates/default/page.html
+++ b/templates/default/page.html
@@ -7,7 +7,7 @@
 <body>
     <header><h1>EPrints by publication date</h1></header>
     <section>
-        {{template "page.include"}}
+        {{template "page.include" .}}
     </section>
 </body>
 </html>
