refining results, adopted MLA style listings for page includes

--- a/templates/default/page.html
+++ b/templates/default/page.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>EPrints by publication date</title>
+    <title>{{ .DocTitle }}</title>
 </head>
 <body>
-    <header><h1>EPrints by publication date</h1></header>
+    <header><h1>{{ .DocTitle }}</h1></header>
     <section>
         {{template "page.include" .}}
     </section>
