--- a/templates/default/results.html
+++ b/templates/default/results.html
@@ -13,7 +13,7 @@
 <body>
     <header><h1>Search Results</h1></header>
     <nav class="site-nav">
-        <li><a href="/search/basic/">New Search</a></li>
+        <li><a href="/search/">New Search</a></li>
     </nav>
     {{ template "content" . }}
     <footer>
