--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Search - Advanced</title>
+    <title>Search</title>
 </head>
 <body>
-    <header><h1>Search - Advanced</h1></header>
+    <header><h1>Search</h1></header>
     <nav class="site-nav">
-        <li><a href="/search/basic/">New Search</a></li>
+        <li><a href="/search/">New Search</a></li>
     </nav>
     {{ template "content" . }}
     <footer>
