--- a/templates/default/page.html
+++ b/templates/default/page.html
@@ -10,10 +10,20 @@
 <body>
     <header>
     <a href="http://library.caltech.edu"><img src="/assets/liblogo.gif" alt="Caltech Library logo"></a> 
+
+<nav class="site-nav">
+<div><a href="/">Home</a></div>
+<div><a href="/recent/articles.html">Recent Articles</a></div> 
+<div><a href="/recent/publications.html">Recent Publications</a></div> 
+<div><a href="/person/">Person</a></div> 
+<div><a href="/affiliation/">Affiliation</a></div> 
+<div><a href="/search/">Search</a></div>
+</nav>
+
     </header>
     <section>
         <h1>{{ .DocTitle }}</h1>
-{{template "page.include" .}}
+{{ template "page.include" . }}
     </section>
     <footer>
         <span><h1><A href="http://caltech.edu">Caltech</a></h1></span>
