--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -2,14 +2,35 @@
 <html>
 <head>
     <title>Search</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/site.css">
+    </style>
 </head>
 <body>
-    <header><h1>Search</h1></header>
-    <nav class="site-nav">
-        <li><a href="/search/">New Search</a></li>
-    </nav>
-    {{ template "content" . }}
+    <header>
+    <a href="http://library.caltech.edu"><img src="/assets/liblogo.gif" alt="Caltech Library logo"></a> 
+
+<nav class="site-nav">
+<div><a href="/">Home</a></div>
+<div><a href="/recent/articles.html">Recent Articles</a></div> 
+<div><a href="/recent/publications.html">Recent Publications</a></div> 
+<div><a href="/person/">Person</a></div> 
+<div><a href="/affiliation/">Affiliation</a></div> 
+<div>Search</div>
+</nav>
+
+    </header>
+    <section>
+        <h2>Search Library Feeds</h2>
+{{ template "content" . }}
+    </section>
     <footer>
+        <span><h1><A href="http://caltech.edu">Caltech</a></h1></span>
+        <span>&copy; 2015 - 2016 <a href="http://library.caltech.edu/CLS_Copyright.htm">Caltech library</a></span>
+        <address>1200 E California Blvd, Mail Code 1-32, Pasadena, CA 91125-3200</address> 
+        <span>Phone: <a href="tel:+1-626-395-3405">(626)395-3405</a></span>
+        <span><a href="mailto:library@caltech.edu">Email Us</a></span>
+        <a class="cl-hide" href="sitemap.xml">Site Map</a>
     </footer>
 </body>
 </html>
