--- a/htdocs/css/site.css
+++ b/htdocs/css/site.css
@@ -136,7 +136,8 @@ nav ul li {
 section {
      position: relative;
      display: inline-block;
-     width: 100%;
+     width: auto;
+     max-width: 100%;
      height: 100%;
      color: black;
      background-color: white;
