--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -8,8 +8,9 @@
 <body>
 <header>
 <a href="http://library.caltech.edu" title="link to Caltech Library Homepage"><img src="assets/liblogo.gif" alt="Caltech Library logo"></a>
+</header>
 
-<nav class="site-nav">
+<nav>
 <div>Home</div>
 <div><a href="/recent/articles.html">Recent Articles</a></div> 
 <div><a href="/recent/publications.html">Recent Publications</a></div> 
@@ -17,8 +18,6 @@
 <div><a href="/affiliation/">Affiliation</a></div> 
 <div><a href="/search/">Search</a></div>
 </nav>
-
-</header>
 
 <section>
 {{ .content }}
