--- a/templates/default/results.html
+++ b/templates/default/results.html
@@ -9,8 +9,9 @@
 <body>
     <header>
     <a href="http://library.caltech.edu"><img src="/assets/liblogo.gif" alt="Caltech Library logo"></a> 
+    </header>
 
-<nav class="site-nav">
+<nav>
 <div><a href="/">Home</a></div>
 <div><a href="/recent/articles.html">Recent Articles</a></div> 
 <div><a href="/recent/publications.html">Recent Publications</a></div> 
@@ -18,7 +19,7 @@
 <div><a href="/affiliation/">Affiliation</a></div> 
 <div><a href="/search/">New Search</a></div>
 </nav>
-    </header>
+
 <section class="content">
 <h2>Results</h2>
 {{ template "content" . }}
