--- a/templates/default/page.html
+++ b/templates/default/page.html
@@ -10,8 +10,9 @@
 <body>
     <header>
     <a href="http://library.caltech.edu"><img src="/assets/liblogo.gif" alt="Caltech Library logo"></a> 
+    </header>
 
-<nav class="site-nav">
+<nav>
 <div><a href="/">Home</a></div>
 <div><a href="/recent/articles.html">Recent Articles</a></div> 
 <div><a href="/recent/publications.html">Recent Publications</a></div> 
@@ -20,7 +21,6 @@
 <div><a href="/search/">Search</a></div>
 </nav>
 
-    </header>
     <section>
         <h1>{{ .DocTitle }}</h1>
 {{ template "page.include" . }}
