--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -9,8 +9,9 @@
 <body>
     <header>
     <a href="http://library.caltech.edu"><img src="/assets/liblogo.gif" alt="Caltech Library logo"></a> 
+    </header>
 
-<nav class="site-nav">
+<nav>
 <div><a href="/">Home</a></div>
 <div><a href="/recent/articles.html">Recent Articles</a></div> 
 <div><a href="/recent/publications.html">Recent Publications</a></div> 
@@ -19,7 +20,6 @@
 <div>Search</div>
 </nav>
 
-    </header>
     <section>
         <h2>Search Library Feeds</h2>
 {{ template "content" . }}
