Bug fixes, better nested templates by name

--- a/templates/default/results.html
+++ b/templates/default/results.html
@@ -22,7 +22,7 @@
 
 <section class="content">
 <h2>Results</h2>
-{{ template "content" . }}
+{{ template "results.include" . }}
 </section>
     <footer>
         <span><h1><A href="http://caltech.edu">Caltech</a></h1></span>
