--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -22,7 +22,7 @@
 
     <section>
         <h2>Search Library Feeds</h2>
-{{ template "content" . }}
+{{ template "search.include" . }}
     </section>
     <footer>
         <span><h1><A href="http://caltech.edu">Caltech</a></h1></span>
