--- a/templates/default/orcid-profile.tmpl
+++ b/templates/default/orcid-profile.tmpl
@@ -3,11 +3,11 @@
 <head>
     {{with .title}}<title>{{ .  }}</title>{{end}}
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/site.css">
+    <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
 <header>
-<a href="http://library.caltech.edu" title="link to Caltech Library Homepage"><img src="assets/liblogo.gif" alt="Caltech Library logo"></a>
+<a href="http://library.caltech.edu" title="link to Caltech Library Homepage"><img src="/assets/liblogo.gif" alt="Caltech Library logo"></a>
 </header>
 {{with .nav}}<nav>
 {{ . }}
@@ -16,7 +16,9 @@
 
 <section>
 Placeholder for ORCID Profile generated person page.
+<pre>
 {{ stringify . true }}
+</pre>
 </section>
 
 <footer>
