--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -16,6 +16,8 @@
 <div><a href="/recent/publications.html">Recent Publications</a></div> 
 <div><a href="/person/">Person</a></div> 
 <div><a href="/affiliation/">Affiliation</a></div> 
+<div><a href="/funder/">Funder</a></div>
+<div><a href="/grantNumber/">Grant Number</a></div>
 <div><a href="/search/">Search</a></div>
 </nav>
 
