--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -17,6 +17,8 @@
 <div><a href="/recent/publications.html">Recent Publications</a></div> 
 <div><a href="/person/">Person</a></div> 
 <div><a href="/affiliation/">Affiliation</a></div> 
+<div><a href="/funder/">Funder</a></div>
+<div><a href="/grantNumber/">Grant Number</a></div>
 <div>Search</div>
 </nav>
 
