--- a/css/site.css
+++ b/css/site.css
@@ -168,10 +168,31 @@ section h3 {
 section ul {
     display: block;
     list-style: inside;
-    list-style-type: square;
+    list-style-type: circle;
     margin: 0;
     padding-left: 1.24em;
 }
+
+section ul ul {
+    list-style-type: disc;
+}
+
+section ul ul ul {
+    list-style-type: square;
+}
+
+section ul ul ul ul {
+    list-style-type: circle;
+}
+
+section ul ul ul ul ul {
+    list-style-type: disc;
+}
+
+section ul ul ul ul ul ul {
+    list-style-type: square;
+}
+
 
 aside {
      margin: 0;
