--- a/templates/landing-page-html.tmpl
+++ b/templates/landing-page-html.tmpl
@@ -16,7 +16,7 @@
 <body>
 <header>
 <h1>${site_title}</h1>
-<h2>The Caltech Institute Archives</h2>
+<h2>Demonstration of Replicated EPrints website</h2>
 </header>
 
 ${if(nav)}<nav>
