--- a/templates/search-html.tmpl
+++ b/templates/search-html.tmpl
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    ${if(page_title)}<title>${page_title}</title>${else}${if(site_title)}<title>${site_title}</title>${endif}${endif}
+    ${if(page_title)}<title>${page_title}</title>${else}<title>${site_title}</title>${endif}
     <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
