--- a/templates/search-html.tmpl
+++ b/templates/search-html.tmpl
@@ -7,8 +7,9 @@
 </head>
 <body>
 <header>
+${if(header)}${header}${else}
 <h1>${site_title}</h1>
-<h2>${organization}</h2>
+<h2>${organization}</h2>${endif}
 </header>
 
 ${if(nav)}<nav>
@@ -22,12 +23,12 @@ ${content}
 </section>
 
 <footer>
-<span><h1><A href="https://caltech.edu">Caltech</a></h1></span>
+${if(footer)}${footer}${else}<span><h1><A href="https://caltech.edu">Caltech</a></h1></span>
 <span>&copy; 2020 <a href="https://www.library.caltech.edu/copyright">Caltech library</a></span>
 <address>1200 E California Blvd, Mail Code 1-32, Pasadena, CA 91125-3200</address> 
 <span>Phone: <a href="tel:+1-626-395-3405">(626)395-3405</a></span>
 <span><a href="mailto:library@caltech.edu">Email Us</a></span>
-<a class="cl-hide" href="sitemap.xml">Site Map</a>
+<a class="cl-hide" href="sitemap.xml">Site Map</a>${endif}
 </footer>
 <!-- START: loading and setting up Lunr.js search -->
 <script src="/js/lunr.js"></script>
