--- a/page.tmpl
+++ b/page.tmpl
@@ -4,6 +4,7 @@
     <title>${title}</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
+	<script type="module" src="https://caltechlibrary.github.io/CL-web-components/src/footer-global.js"></script>
 </head>
 <body>
 <header>
@@ -26,12 +27,7 @@
 ${body}
 </section>
 
-<footer>
-<span>&copy; 2021 <a href="https://www.library.caltech.edu/copyright">Caltech Library</a></span>
-<address>1200 E California Blvd, Mail Code 1-32, Pasadena, CA 91125-3200</address>
-<span><a href="mailto:library@caltech.edu">Email Us</a></span> 
-<span>Phone: <a href="tel:+1-626-395-3405">(626)395-3405</a></span>
-</footer>
+<footer-global></footer-global>
 <!-- START: PrettyFi from https://github.com/google/code-prettify -->
 <script>
 /* We want to add the class "prettyprint" to all the pre elements */
